# olagem

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  endscreen.c  endscreen.h  file_reader.lua  generateur.lua  main.c  manpage  screen_tools.c  screen_tools.h  settings.c  settings.h  settings.txt  startscreen.c  startscreen.h  terminal_printer.c  terminal_printer.h  test.py  text.txt  wiki.wiki  wikipedia_scraping.lua
.github/workflows/: rust.yml
assets/: config.toml  results.csv
assets/language/: french
doc/: manpage
headers/: endscreen.h  screen_tools.h  terminal_printer.h
lua/: file_reader.lua  generateur.lua  wikipedia_scraping.lua
src/: app.rs  config.rs  event.rs  generator.rs  handler.rs  lib.rs  main.rs  results.rs  settings.rs  stats.rs  testapp.rs  tui.rs  ui.rs
src/views/: menu.rs  mod.rs  panic.rs  results.rs  settings.rs  test.rs
