[package]
name = "olagem"
version = "0.1.0"
edition = "2021"
description = "Typing speed test in the terminal"
author = ["Benjamin Voisin <benjamin.voisin@ens-rennes.fr>"]
readme = "README.md"
repository = "https://github.com/benjamin-voisin/olagem.git"
homepage = "https://github.com/benjamin-voisin/olagem.git"
licence = "CC-BY-SA-4.0"
licence-file = "LICENCE"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
rand = "*"
dirs = "^5.0"



[build-dependencies]
dirs = "^5.0"
