[package]
name = "olagem"
version = "0.1.2"
edition = "2021"
description = "Typing speed test in the terminal"
author = ["Benjamin Voisin <benjamin.voisin@ens-rennes.fr>"]
readme = "README.md"
repository = "https://github.com/benjamin-voisin/olagem.git"
homepage = "https://github.com/benjamin-voisin/olagem.git"
license = "CC0-1.0"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.24.0"
rand = "0.8.5"
dirs = "^5.0"
toml = "0.8.16"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
csv = "1.3.0"



[build-dependencies]
dirs = "^5.0"
